--- a/index.html
+++ b/index.html
@@ -238,62 +238,6 @@
             margin-right: 20px;
         }
 
-        .testimonials {
-            padding: 50px 20px;
-            color: white;
-            text-align: center;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .testimonials h2 {
-            font-size: 36px;
-            margin-bottom: 40px;
-            animation: fadeInDown 1s ease-out;
-        }
-
-        .testimonial-slider {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            animation: slideTestimonials 21s linear infinite;
-            position: relative;
-        }
-
-        .testimonial-item {
-            flex: 0 0 100%;
-            max-width: 100%;
-            background-size: cover;
-            background-position: center;
-            padding: 50px 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-            animation: fadeInUp 1.5s ease-out;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 300px;
-            color: white;
-        }
-
-        .testimonial-item p {
-            font-size: 18px;
-            margin-bottom: 15px;
-        }
-
-        .testimonial-item h4 {
-            font-size: 20px;
-            font-weight: bold;
-        }
-
-        @keyframes slideTestimonials {
-            0%, 25% {transform: translateX(0);}
-            33.33%, 58.33% {transform: translateX(-100%);}
-            66.66%, 91.66% {transform: translateX(-200%);}
-            100% {transform: translateX(0);}
-        }
-
         footer {
             background-color: #333;
             text-align: center;
@@ -339,9 +283,8 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="products">Products</a></li>
+                <li><a href="about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -349,8 +292,8 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Welcome to netshop.id</h1>
-            <p>Your one-stop shop for all digital products.</p>
-            <button>Explore Now</button>
+            <p>Dipercaya sebagai penyedia layanan cloud dan digital sejak 2021</p>
+            <button onclick="shopNow()">Shop Now</button>
         </div>
     </section>
 
@@ -370,7 +313,7 @@
                 <button>Order</button>
             </div>
             <div class="product-item">
-                <img src="allkey/netshop.display.spotify.png" alt="Spotify Premium - Display">
+                <img src="allkey/netshop.display.spotify.png" alt="Spotify Premium">
                 <h3>Spotify Premium</h3>
                 <p class="price">IDR 9.900/month</p>
                 <button>Order</button>
@@ -378,7 +321,7 @@
         </div>
     </section>
 
-    <section class="benefits">
+<section class="benefits">
         <h2>Keuntungan dari netshop.id</h2>
         <div class="benefit-item">
             <div class="benefit-icon">🚀</div>
@@ -403,35 +346,25 @@
         </div>
     </section>
 
-    <section class="testimonials">
-        <h2>Testimoni Klien</h2>
-        <div class="testimonial-slider">
-            <div class="testimonial-item" style="background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('background-image1.jpg');">
-                <p>"Layanan netshop.id sangat memuaskan! Proses cepat dan aman. Sangat direkomendasikan!"</p>
-                <h4>John Doe</h4>
-            </div>
-            <div class="testimonial-item" style="background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('background-image2.jpg');">
-                <p>"Produk-produk digital yang ditawarkan di netshop.id selalu berkualitas tinggi."</p>
-                <h4>Jane Smith</h4>
-            </div>
-            <div class="testimonial-item" style="background-image: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('background-image3.jpg');">
-                <p>"Harga yang sangat kompetitif dengan layanan yang luar biasa."</p>
-                <h4>Michael Brown</h4>
-            </div>
-        </div>
-    </section>
-
     <footer>
-        &copy; 2024 netshop.id. All rights reserved.
+        <p>&copy; 2024 netshop.id. All rights reserved.</p>
     </footer>
 
     <script>
         function toggleMenu() {
-            var menu = document.querySelector('nav ul');
-            var hamburger = document.querySelector('.hamburger');
-            menu.classList.toggle('active');
+            const nav = document.querySelector('nav ul');
+            const hamburger = document.querySelector('.hamburger');
+            nav.classList.toggle('active');
             hamburger.classList.toggle('active');
         }
+
+        function shopNow() {
+            window.location.href = 'products';
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            console.log('Welcome to netshop.id!');
+        });
     </script>
 </body>
 </html>
