--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
 
             .hamburger {
                 display: flex;
-                position: relative;
-                right: 0;
+                position: absolute;
+                top: 20px; /* Sesuaikan posisi vertikal hamburger */
+                right: 20px; /* Sesuaikan posisi horizontal hamburger */
             }
+
 
             @keyframes slideDown {
                 from {
