--- a/products/index.html
+++ b/products/index.html
@@ -96,8 +96,9 @@
 
             .hamburger {
                 display: flex;
-                position: relative;
-                right: 0;
+                position: absolute;
+                top: 35px; /* Geser hamburger menu sedikit ke bawah */
+                right: 20px; /* Posisi horizontal hamburger menu */
             }
 
             @keyframes slideDown {
