--- a/products/index.html
+++ b/products/index.html
@@ -270,7 +270,7 @@
                 productItem.innerHTML = `
                     <img src="${product.url}" alt="${product.name}">
                     <h3>${product.name}</h3>
-                    <p class="price">$${product.price}</p>
+                    <p class="price">IDR ${product.price}</p>
                 `;
 
                 productGrid.appendChild(productItem);
