--- a/products/index.html
+++ b/products/index.html
@@ -97,8 +97,8 @@
             .hamburger {
                 display: flex;
                 position: absolute;
-                top: 35px; /* Geser hamburger menu sedikit ke bawah */
-                right: 20px; /* Posisi horizontal hamburger menu */
+                top: 35px;
+                right: 20px;
             }
 
             @keyframes slideDown {
@@ -144,6 +144,12 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
+        }
+
+        @media (max-width: 500px) {
+            .product-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
         }
 
         .product-item {
@@ -192,7 +198,7 @@
         <div class="logo">
             <img src="/allkey/netshop.display.iconnav.png" alt="netshop.id">
         </div>
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger" aria-label="Toggle navigation menu" onclick="toggleMenu()">
             <div></div>
             <div></div>
             <div></div>
@@ -258,17 +264,22 @@
         function displayProducts(productList) {
             productGrid.innerHTML = '';
 
+            if (productList.length === 0) {
+                productGrid.innerHTML = '<p>No products found</p>';
+                return;
+            }
+
             productList.forEach(product => {
                 const productItem = document.createElement('div');
                 productItem.className = 'product-item';
-                
+
                 // Tambahkan event listener untuk redirect ke halaman detail
                 productItem.addEventListener('click', () => {
                     window.location.href = product.detailUrl;
                 });
 
                 productItem.innerHTML = `
-                    <img src="${product.url}" alt="${product.name}">
+                    <img src="${product.url}" alt="${product.name}" loading="lazy">
                     <h3>${product.name}</h3>
                     <p class="price">IDR ${product.price}</p>
                 `;
@@ -277,14 +288,23 @@
             });
         }
 
-        // Fungsi untuk mencari produk
-        document.getElementById('searchInput').addEventListener('input', function () {
+        // Fungsi untuk mencari produk dengan debounce
+        function debounce(func, delay) {
+            let debounceTimer;
+            return function() {
+                clearTimeout(debounceTimer);
+                debounceTimer = setTimeout(() => func.apply(this, arguments), delay);
+            };
+        }
+
+        const searchInput = document.getElementById('searchInput');
+        searchInput.addEventListener('input', debounce(function() {
             const searchQuery = this.value.toLowerCase();
             const filteredProducts = products.filter(product =>
                 product.name.toLowerCase().includes(searchQuery)
             );
             displayProducts(filteredProducts);
-        });
+        }, 300));
     </script>
 </body>
 
