--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -367,7 +367,8 @@
                     "RAM": "1GB",
                     "Storage": "10GB SSD",
                     "Bandwidth": "Unlimited",
-                    "Support": "Basic Support"
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%"
                 }
             },
             "standard": {
