--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -361,8 +361,8 @@
     <script>
         const productData = {
             "entry": {
-                "name": "Entry",
-                "price": "IDR 7.99",
+                "name": "Entry Shared 1GB",
+                "price": "IDR 4.999",
                 "features": {
                     "RAM": "1GB",
                     "Storage": "10GB SSD",
