--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -360,35 +360,84 @@
 
     <script>
         const productData = {
-            "entry": {
-                "name": "Entry Shared 1GB",
+            "es1": {
+                "name": "Shared Entry 1GB",
                 "price": "IDR 4.999",
                 "features": {
                     "RAM": "1GB",
                     "Storage": "10GB SSD",
                     "Bandwidth": "Unlimited",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Lokasi Server": "Singapore", 
                     "Siklus": "30 Hari", 
-                    "Antidown": "85%"
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
                 }
             },
-            "standard": {
-                "name": "Standard",
-                "price": "IDR 14.99",
+            "es2": {
+                "name": "Shared Entry 2GB",
+                "price": "IDR 4.999",
                 "features": {
-                    "RAM": "2GB",
-                    "Storage": "20GB SSD",
+                    "RAM": "1GB",
+                    "Storage": "10GB SSD",
                     "Bandwidth": "Unlimited",
-                    "Support": "24/7 Support"
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Lokasi Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
                 }
             },
-            "premium": {
-                "name": "Premium",
-                "price": "IDR 29.99",
+            "es3": {
+                "name": "Shared Entry 3GB",
+                "price": "IDR 4.999",
                 "features": {
-                    "RAM": "4GB",
-                    "Storage": "40GB SSD",
+                    "RAM": "1GB",
+                    "Storage": "10GB SSD",
                     "Bandwidth": "Unlimited",
-                    "Support": "Premium Support"
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Lokasi Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
+                }
+            },
+            "es4": {
+                "name": "Shared Entry 4GB",
+                "price": "IDR 4.999",
+                "features": {
+                    "RAM": "1GB",
+                    "Storage": "10GB SSD",
+                    "Bandwidth": "Unlimited",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Lokasi Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
+                }
+            },
+            "es5": {
+                "name": "Shared Entry 5GB",
+                "price": "IDR 4.999",
+                "features": {
+                    "RAM": "1GB",
+                    "Storage": "10GB SSD",
+                    "Bandwidth": "Unlimited",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Lokasi Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
                 }
             }
         };
