--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -365,8 +365,8 @@
                 "price": "IDR 4.999",
                 "features": {
                     "RAM": "1GB",
-                    "Storage": "10GB SSD",
-                    "Bandwidth": "Unlimited",
+                    "Storage": "5GB SSD",
+                    "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
@@ -378,11 +378,11 @@
             },
             "es2": {
                 "name": "Shared Entry 2GB",
-                "price": "IDR 4.999",
+                "price": "IDR 9.998",
                 "features": {
-                    "RAM": "1GB",
+                    "RAM": "2GB",
                     "Storage": "10GB SSD",
-                    "Bandwidth": "Unlimited",
+                    "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
@@ -394,10 +394,10 @@
             },
             "es3": {
                 "name": "Shared Entry 3GB",
-                "price": "IDR 4.999",
+                "price": "IDR 14.997",
                 "features": {
-                    "RAM": "1GB",
-                    "Storage": "10GB SSD",
+                    "RAM": "3GB",
+                    "Storage": "15GB SSD",
                     "Bandwidth": "Unlimited",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -410,10 +410,10 @@
             },
             "es4": {
                 "name": "Shared Entry 4GB",
-                "price": "IDR 4.999",
+                "price": "IDR 19.996",
                 "features": {
-                    "RAM": "1GB",
-                    "Storage": "10GB SSD",
+                    "RAM": "4GB",
+                    "Storage": "20GB SSD",
                     "Bandwidth": "Unlimited",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
@@ -426,10 +426,42 @@
             },
             "es5": {
                 "name": "Shared Entry 5GB",
-                "price": "IDR 4.999",
+                "price": "IDR 24.995",
                 "features": {
-                    "RAM": "1GB",
-                    "Storage": "10GB SSD",
+                    "RAM": "5GB",
+                    "Storage": "25GB SSD",
+                    "Bandwidth": "Unlimited",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Lokasi Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
+                }
+            }, 
+            "es6": {
+                "name": "Shared Entry 6GB",
+                "price": "IDR 29.994",
+                "features": {
+                    "RAM": "6GB",
+                    "Storage": "30GB SSD",
+                    "Bandwidth": "Unlimited",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Lokasi Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
+                }
+            }, 
+            "es7": {
+                "name": "Shared Entry 7GB",
+                "price": "IDR 34.993",
+                "features": {
+                    "RAM": "7GB",
+                    "Storage": "35GB SSD",
                     "Bandwidth": "Unlimited",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
