--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -370,7 +370,7 @@
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
-                    "Lokasi Server": "Singapore", 
+                    "Server": "Singapore", 
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
@@ -386,7 +386,7 @@
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
-                    "Lokasi Server": "Singapore", 
+                    "Server": "Singapore", 
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
@@ -398,11 +398,11 @@
                 "features": {
                     "RAM": "3GB",
                     "Storage": "15GB SSD",
-                    "Bandwidth": "Unlimited",
+                    "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
-                    "Lokasi Server": "Singapore", 
+                    "Server": "Singapore", 
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
@@ -414,11 +414,11 @@
                 "features": {
                     "RAM": "4GB",
                     "Storage": "20GB SSD",
-                    "Bandwidth": "Unlimited",
+                    "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
-                    "Lokasi Server": "Singapore", 
+                    "Server": "Singapore", 
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
@@ -430,11 +430,11 @@
                 "features": {
                     "RAM": "5GB",
                     "Storage": "25GB SSD",
-                    "Bandwidth": "Unlimited",
+                    "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
-                    "Lokasi Server": "Singapore", 
+                    "Server": "Singapore", 
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
@@ -446,11 +446,11 @@
                 "features": {
                     "RAM": "6GB",
                     "Storage": "30GB SSD",
-                    "Bandwidth": "Unlimited",
+                    "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
-                    "Lokasi Server": "Singapore", 
+                    "Server": "Singapore", 
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
@@ -462,11 +462,59 @@
                 "features": {
                     "RAM": "7GB",
                     "Storage": "35GB SSD",
-                    "Bandwidth": "Unlimited",
+                    "Bandwidth": "Unmetered",
                     "Panel Backup": "2 Slot", 
                     "Extra Port": "+1", 
                     "Create Database": "0", 
-                    "Lokasi Server": "Singapore", 
+                    "Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
+                }
+            }, 
+            "es8": {
+                "name": "Shared Entry 8GB",
+                "price": "IDR 39.992",
+                "features": {
+                    "RAM": "8GB",
+                    "Storage": "40GB SSD",
+                    "Bandwidth": "Unmetered",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
+                }
+            }, 
+            "es9": {
+                "name": "Shared Entry 9GB",
+                "price": "IDR 44.991",
+                "features": {
+                    "RAM": "9GB",
+                    "Storage": "45GB SSD",
+                    "Bandwidth": "Unmetered",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Server": "Singapore", 
+                    "Siklus": "30 Hari", 
+                    "Antidown": "85%", 
+                    "Daily Backup": "✅", 
+                }
+            }, 
+            "es10": {
+                "name": "Shared Entry 10GB",
+                "price": "IDR 49.990",
+                "features": {
+                    "RAM": "10GB",
+                    "Storage": "50GB SSD",
+                    "Bandwidth": "Unmetered",
+                    "Panel Backup": "2 Slot", 
+                    "Extra Port": "+1", 
+                    "Create Database": "0", 
+                    "Server": "Singapore", 
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
