--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -308,7 +308,7 @@
 
     <div class="product-container">
         <div>
-            <img src="https://example.com/images/product-image.jpg" alt="Product Name" class="product-image">
+            <img src="https://kulosikham.github.io/allkey/netshop.display.minecraftserver.png" alt="Product Name" class="product-image">
         </div>
         <div class="product-details">
             <h1>Product Name</h1>
