--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -312,7 +311,7 @@
         </div>
         <div class="product-details">
             <h1>Product Name</h1>
-            <p class="category">Category: Hosting Services</p>
+            <p class="category">Category: Hosting and Cloud</p>
             <p>Deskripsi Produk: Produk ini memberikan solusi hosting yang terjangkau untuk server Minecraft dengan performa tinggi dan stabilitas maksimal.</p>
 
             <div class="product-select">
@@ -374,6 +373,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Bungee, Velocity", 
+                    "Player Recomended": "-", 
                 }
             },
             "es2": {
@@ -390,6 +391,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Bungee, Velocity", 
+                    "Player Recomended": "-", 
                 }
             },
             "es3": {
@@ -406,6 +409,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Bungee, Velocity, Paper", 
+                    "Player Recomended": "1-3", 
                 }
             },
             "es4": {
@@ -422,6 +427,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Bungee, Velocity, Paper", 
+                    "Player Recomended": "1-5", 
                 }
             },
             "es5": {
@@ -438,6 +445,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Paper, Purpur", 
+                    "Player Recomended": "5-10", 
                 }
             }, 
             "es6": {
@@ -454,6 +463,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Paper, Purpur, Spigot", 
+                    "Player Recomended": "5-12", 
                 }
             }, 
             "es7": {
@@ -470,6 +481,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Paper, Purpur, Spigot", 
+                    "Player Recomended": "10-15", 
                 }
             }, 
             "es8": {
@@ -486,6 +499,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Paper, Purpur, Spigot, Tuinity", 
+                    "Player Recomended": "20-30", 
                 }
             }, 
             "es9": {
@@ -502,6 +517,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Paper, Purpur, Spigot, Tuinity", 
+                    "Player Recomended": "20-30", 
                 }
             }, 
             "es10": {
@@ -518,6 +535,8 @@
                     "Siklus": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
+                    "Software Recomended": "Paper, Purpur, Spigot, Tuinity", 
+                    "Player Recomended": "20-30", 
                 }
             }
         };
