--- a/products/shared-entry-minecraft-hosting/index.html
+++ b/products/shared-entry-minecraft-hosting/index.html
@@ -370,7 +370,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Bungee, Velocity", 
@@ -388,7 +389,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Bungee, Velocity", 
@@ -406,7 +408,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Bungee, Velocity, Paper", 
@@ -424,7 +427,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Bungee, Velocity, Paper", 
@@ -442,7 +446,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Paper, Purpur", 
@@ -460,7 +465,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Paper, Purpur, Spigot", 
@@ -478,7 +484,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Paper, Purpur, Spigot", 
@@ -496,7 +503,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Paper, Purpur, Spigot, Tuinity", 
@@ -514,7 +522,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Paper, Purpur, Spigot, Tuinity", 
@@ -532,7 +541,8 @@
                     "Extra Port": "+1", 
                     "Create Database": "0", 
                     "Server": "Singapore", 
-                    "Siklus": "30 Hari", 
+                    "Aikar's Flag": "✅", 
+                    "Cycle": "30 Hari", 
                     "Antidown": "85%", 
                     "Daily Backup": "✅", 
                     "Software Recomended": "Paper, Purpur, Spigot, Tuinity", 
